--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,10 @@
         "random": "cpp",
         "thread": "cpp",
         "*.tcc": "cpp",
-        "memory_resource": "cpp"
+        "memory_resource": "cpp",
+        "csignal": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
