--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,5 +84,6 @@
         "typeindex": "cpp",
         "variant": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "python.formatting.provider": "black"
 }
