--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,5 +86,5 @@
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "python.formatting.provider": "black",
-    "cSpell.enabled": false
+    "cSpell.enabled": true
 }
