--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,5 +87,5 @@
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "python.formatting.provider": "black",
-    "cSpell.enabled": true
+    "cSpell.enabled": false
 }
